master_worker/deployment/deprecable/service_documentos.yml
apiVersion: v1
kind: Service
metadata:
  name: service-document
  # namespace: documentos
  labels:
    app.kubernetes.io/name: documentos
    app.kubernetes.io/part-of: documentos
spec:
  type: LoadBalancer
  externalIPs:
  - 128.5.9.70
  # type: NodePort
  ports:
    # - name: http
    #   port: 80
    #   targetPort: 80
    #   protocol: TCP
    #   nodePort: 32000
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
      nodePort: 32001
  selector:
    run: laravel-documentos

# apiVersion: v1
# kind: Service
# metadata:
#   name: laravel-documentos
#   namespace: mineco-cluster
#   labels:
#     app: backend
# spec:
#   type: NodePort
#   selector:
#     run: laravel-documentos
#   ports:
#     - port: 443
#       targetPort: 443
#       nodePort: 31000
#     # - port: 80
#     #   targetPort: 80
#     #   nodePort: 31000
#     # - port: 443
#     #   containerPort: 443
#     #   protocol: TCP
