master_worker/deployment/deprecable/ingress_documentos.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: laravel-documentos
  # namespace: documentos
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: laravel-documentos
              servicePort: 443
